--- a/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer/Resources.resx
+++ b/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer/Resources.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Type names should be all uppercase.</value>
+  <data name="SEC0001_AnalyzerTitle" xml:space="preserve">
+    <value>string can be checked with .HasContent()</value>
+    <comment>The title of the diagnostic.</comment>
+  </data>
+  <data name="SEC0001_Description" xml:space="preserve">
+    <value>!string.IsNullOrWhiteSpace() should be repaced with .HasContent()</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
-  <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Type name '{0}' contains lowercase letters</value>
+  <data name="SEC0001_MessageFormat" xml:space="preserve">
+    <value>String '{0}' can be checked with .HasContent()</value>
     <comment>The format-able message the diagnostic displays.</comment>
-  </data>
-  <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Type name contains lowercase letters</value>
-    <comment>The title of the diagnostic.</comment>
   </data>
 </root>
