--- a/src/Stravaig.Extensions.Core.Analyzer/Resources.resx
+++ b/src/Stravaig.Extensions.Core.Analyzer/Resources.resx
@@ -126,7 +126,17 @@
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="SEC0001_MessageFormat" xml:space="preserve">
-    <value>String '{0}' can be checked with .HasContent()</value>
+    <value>String '{0}' can be checked with {0}.HasContent()</value>
     <comment>The format-able message the diagnostic displays.</comment>
+  </data>
+  <data name="SEC0002_AnalyzerTitle" xml:space="preserve">
+    <value>String can be compared with .IsBefore()</value>
+  </data>
+  <data name="SEC0002_Description" xml:space="preserve">
+    <value>"string.Compare(...) &lt; 0" should be replaced with ".IsBefore(...)"</value>
+  </data>
+  <data name="SEC0002_MessageFormat" xml:space="preserve">
+    <value>"string.Compare({0}, {1}, {2}) &lt; 0" can be replaced with "{0}.IsBefore({1}, {2})"</value>
+    <comment>0 = LHS, 1 = RHS; 2 = StringComparison</comment>
   </data>
 </root>
